--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -172,6 +172,7 @@
 <!ENTITY Ctr_ctroldsearch	"Starý styl vyhledávání">
 <!ENTITY Ctr_ctroldsearchc	"Po vyhledávání vyčistit pole hledání">
 <!ENTITY Ctr_ctroldsearchr	"Po vyhledávání přejít k prvnímu vyhledávači v seznamu">
+<!ENTITY Ctr_ctrosearchdel	"delay">
 <!ENTITY Ctr_search_oit		"Otevřít vyhledávání v novém panelu">
 <!ENTITY Ctr_osearch_meoit	"Klik kolečkem myši: prohledávat nové panely 'na pozadí'">
 <!ENTITY Ctr_osearch_iwidth	"Automatická šířka popup okna">
