--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -172,6 +172,7 @@
 <!ENTITY Ctr_ctroldsearch	"Gamle søgning">
 <!ENTITY Ctr_ctroldsearchc	"Ryd søgeboks efter søgning">
 <!ENTITY Ctr_ctroldsearchr	"Fald tilbage til første søgemaskine i liste, efter søgning">
+<!ENTITY Ctr_ctrosearchdel	"delay">
 <!ENTITY Ctr_search_oit		"Åbn søgning i nyt faneblad">
 <!ENTITY Ctr_osearch_meoit	"Mellemklik: søg i nyt 'forgrundsfaneblad'">
 <!ENTITY Ctr_osearch_iwidth	"Automatisk justering af popup-bredde">
