--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -172,6 +172,7 @@
 <!ENTITY Ctr_ctroldsearch	"Stare pytanje">
 <!ENTITY Ctr_ctroldsearchc	"Po pytanju pytanske polo wuprózdnić">
 <!ENTITY Ctr_ctroldsearchr	"Po pytanju so k prěnjej pytawje w lisćinje wróćić">
+<!ENTITY Ctr_ctrosearchdel	"delay">
 <!ENTITY Ctr_search_oit		"Pytanje w nowym rajtarku wočinić">
 <!ENTITY Ctr_osearch_meoit	"Srjedźne kliknjenja: W nowym 'prědkowym rajtarku' pytać">
 <!ENTITY Ctr_osearch_iwidth	"Šěrokosć wuskakowaceho wokna přiměrić">
