--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -172,6 +172,7 @@
 <!ENTITY Ctr_ctroldsearch	"Pesquisa antiga">
 <!ENTITY Ctr_ctroldsearchc	"Limpar caixa de pesquisa após pesquisar">
 <!ENTITY Ctr_ctroldsearchr	"Reverter para primeiro mecanismo de busca na lista após pesquisar">
+<!ENTITY Ctr_ctrosearchdel	"Atraso (em msegs.) na execução">
 <!ENTITY Ctr_search_oit		"Abrir pesquisa em nova aba">
 <!ENTITY Ctr_osearch_meoit	"Cliques do meio: pesquisar em nova 'aba em primeiro plano'">
 <!ENTITY Ctr_osearch_iwidth	"Automaticamente ajustar largura do popup">
