--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -172,6 +172,7 @@
 <!ENTITY Ctr_ctroldsearch	"Alte Suche">
 <!ENTITY Ctr_ctroldsearchc	"Eingabefeld nach der Suche leeren">
 <!ENTITY Ctr_ctroldsearchr	"Nach der Suche zur ersten Suchmaschine in der Liste wechseln">
+<!ENTITY Ctr_ctrosearchdel	"Ausführungsverzögerung">
 <!ENTITY Ctr_search_oit		"Suche in neuem Tab öffnen">
 <!ENTITY Ctr_osearch_meoit	"Mittelklick: Suche im Vordergrund-Tab öffnen">
 <!ENTITY Ctr_osearch_iwidth	"Pop-up-Breite automatisch der Suchfeldbreite anpassen">
