--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -172,6 +172,7 @@
 <!ENTITY Ctr_ctroldsearch	"Menú antiguo de la barra de búsqueda">
 <!ENTITY Ctr_ctroldsearchc	"Limpiar barra de búsqueda después de buscar">
 <!ENTITY Ctr_ctroldsearchr	"Volver al primer motor de búsqueda de la lista después de buscar">
+<!ENTITY Ctr_ctrosearchdel	"Retardo de la activación">
 <!ENTITY Ctr_search_oit		"Abrir búsqueda en una nueva pestaña">
 <!ENTITY Ctr_osearch_meoit	"Clic central: Realiza la búsqueda en una nueva 'pestaña en primer plano'">
 <!ENTITY Ctr_osearch_iwidth	"Ajustar automáticamente la anchura del menú emergente">
