--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -172,6 +172,7 @@
 <!ENTITY Ctr_ctroldsearch	"Vana otsing">
 <!ENTITY Ctr_ctroldsearchc	"Pärast otsingu teostamist tühjenda otsingukast">
 <!ENTITY Ctr_ctroldsearchr	"Pärast otsingu teostamist taasta vaikimisi otsingumootor">
+<!ENTITY Ctr_ctrosearchdel	"delay">
 <!ENTITY Ctr_search_oit		"Ava otsingutulemuste leht uuel kaardil">
 <!ENTITY Ctr_osearch_meoit	"Hiire keskmise nupuga klõpsamine: otsi uuel esiplaanil oleval kaardil">
 <!ENTITY Ctr_osearch_iwidth	"Automaatselt kohanda hüpiku laiust">
