--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -48,7 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(stile classico)">
 <!ENTITY Ctr_tabminheight	"Altezza:">
 <!ENTITY Ctr_tabheightinfo	"Valori bassi provocheranno anomalie nella finestra ingrandita!">
-<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
+<!ENTITY Ctr_ctrltabprev	"Schede precedenti usando 'Ctrl + Tab'">
 <!ENTITY Ctr_tabmaxwidth	"Larghezza massima:">
 <!ENTITY Ctr_tabminwidth	"Larghezza minima:">
 <!ENTITY Ctr_tabwidthinfo	"La larghezza minima e massima delle schede è definita da TabMixPlus">
@@ -126,7 +126,7 @@
 <!ENTITY Ctr_altoptionswh	"Altezza">
 <!ENTITY Ctr_altoptionsi	"La finestra delle opzioni non si presenta più come un dialogo ma come una finestra del browser con tutte le barre degli strumenti nascoste. La caratteristica 'Usa la pagina corrente' aggiunge gli url delle pagine aperte nella finestra corrente, che in questo caso è solo 'about:preferences'. Il pulsante delle 'opzioni' è sostituito da uno nuovo che è in grado di aprire le opzioni in una finestra.">
 <!ENTITY Ctr_options_rem	"Ricorda l'ultima categoria selezionata">
-<!ENTITY Ctr_aboutpages		"General 'about:' pages: alternative appearance">
+<!ENTITY Ctr_aboutpages		"Pagine 'about:' generiche: aspetto alternativo">
 <!ENTITY Ctr_svgfilters		"Colori SVG per le icone dei pulsanti della barra strumenti">
 <!ENTITY Ctr_wincontrols	"Angoli finestra mobili in modalità schermo intero">
 <!ENTITY Ctr_puibuttonsep	"Separatore del pulsante Menu">
@@ -150,10 +150,10 @@
 <!ENTITY Ctr_navlargeicons	"Icone grandi">
 <!ENTITY Ctr_nbisizedelay0	"Ritardo esecuzione in ms">
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sec)">
-<!ENTITY Ctr_findbar		"Findbar">
-<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
-<!ENTITY Ctr_findbar_width	"Findboxes width: ">
-<!ENTITY Ctr_findbarpos		"Posizione della barra di ricerca nel testo">
+<!ENTITY Ctr_findbar		"Barra per la ricerca nel testo">
+<!ENTITY Ctr_findbar_hws	"Chiudi la barra per la ricerca nel testo  con lo scorrimento della pagina">
+<!ENTITY Ctr_findbar_width	"Larghezza della casella di ricerca: ">
+<!ENTITY Ctr_findbarpos		"Posizione della barra per la ricerca nel testo">
 <!ENTITY Ctr_findbar_def	"Posizione predefinita">
 <!ENTITY Ctr_findbar_top	"In alto">
 <!ENTITY Ctr_findbar_topa	"In alto (stile alternativo)">
@@ -172,6 +172,7 @@
 <!ENTITY Ctr_ctroldsearch	"Ricerca vecchio stile">
 <!ENTITY Ctr_ctroldsearchc	"Pulisci la casella di ricerca dopo aver effettuato la ricerca">
 <!ENTITY Ctr_ctroldsearchr	"Ripristina il primo motore di ricerca dell'elenco dopo aver effettuato la ricerca">
+<!ENTITY Ctr_ctrosearchdel	"Ritardo esecuzione in ms">
 <!ENTITY Ctr_search_oit		"Apri la ricerca in una nuova scheda">
 <!ENTITY Ctr_osearch_meoit	"Clic sul tasto centrale: ricerca in una nuova scheda attiva">
 <!ENTITY Ctr_osearch_iwidth	"Regola automaticamente la larghezza del menu a discesa">
@@ -179,7 +180,7 @@
 <!ENTITY Ctr_osearch_dm		"Freccia verso il basso piccola">
 <!ENTITY Ctr_addonmanager	"Gestione componenti aggiuntivi">
 <!ENTITY Ctr_alt_addonsp	"Pagina 'Altro' dei componenti aggiuntivi: aspetto alternativo">
-<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
+<!ENTITY Ctr_am_showrecup	"Mostra sempre la categoria 'Aggiornamenti recenti'">
 <!ENTITY Ctr_alt_addonsm	"Gestione componenti aggiuntivi: aspetto alternativo">
 <!ENTITY Ctr_am_nowarning	"Informazioni sui componenti: nascondi avvisi">
 <!ENTITY Ctr_am_compact		"Informazioni sui componenti: visualizzazione compatta">
@@ -219,7 +220,7 @@
 <!ENTITY Ctr_navthrobber2	"Aggiungi URL o lascia vuoto">
 <!ENTITY Ctr_anewtaburl		"URL della pagina Nuova scheda">
 <!ENTITY Ctr_anewtaburlcb	"URL personalizzato della pagina Nuova scheda (predefinito: 'about:newtab')">
-<!ENTITY Ctr_anewtaburlpcb	"Custom private new tab page url (default: 'about:privatebrowsing')">
+<!ENTITY Ctr_anewtaburlpcb	"URL personalizzato della pagina Nuova scheda in incognito (default: 'about:privatebrowsing')">
 
 <!ENTITY Ctr_tab_tf_info1	"È possibile usare nomi di colori (in inglese), valori esadecimali e i formati rgb(a) e hsl(a).">
 <!ENTITY Ctr_tab_tf_info2	"Nessuna validazione dell’input.">
@@ -243,7 +244,7 @@
 <!ENTITY Ctr_italic			"Corsivo">
 <!ENTITY Ctr_underlined		"Sottolineato">
 <!ENTITY Ctr_notabhov		"Le impostazioni attivate prevalgono su quelle del passaggio del mouse">
-<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
+<!ENTITY Ctr_tablowopa		"Riduci la visibilità della scheda">
 <!ENTITY Ctr_tabc_act_tb	"Colore di sfondo delle barre degli strumenti">
 
 <!ENTITY Ctr_urlbar			"Barra degli indirizzi">
@@ -257,7 +258,7 @@
 <!ENTITY Ctr_urlbardropm	"Sposta il dropmarker nella posizione più lontana possibile">
 <!ENTITY Ctr_urlbardropm2	"Dropmarker sempre visibile">
 <!ENTITY Ctr_altreaderico	"Icone alternative della modalità di lettura">
-<!ENTITY Ctr_hideurlzoom	"Hide zoom button (if present)">
+<!ENTITY Ctr_hideurlzoom	"Nascondi il pulsante dello zoom (se presente)">
 <!ENTITY Ctr_hideprbutton	"Nascondi l’icona di notifica quando un popup viene bloccato">
 <!ENTITY Ctr_locsearchbw10	"Riduci l'altezza delle barre degli indirizzi e di ricerca (sperimentale)">
 <!ENTITY Ctr_urlbar_ib		"Pulsante delle connessioni sicure (riquadro di verifica)">
@@ -279,14 +280,14 @@
 <!ENTITY Ctr_searchbar		"Barra di ricerca">
 <!ENTITY Ctr_autocomplete	"Completamento automatico">
 <!ENTITY Ctr_altautocompl	"Aspetto alternativo">
-<!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
+<!ENTITY Ctr_autocompl_it	"Rimuovi le voci 'Cerca con...' e 'Apri' (se presenti)">
 <!ENTITY Ctr_autocompl_hl	"Evidenziamento del testo dei risultati">
-<!ENTITY Ctr_autocompl_rhl	"Aero colors for highlighted results">
-<!ENTITY Ctr_autocompl_not	"Hide page title">
+<!ENTITY Ctr_autocompl_rhl	"Colori Aero per i risultati evidenziati">
+<!ENTITY Ctr_autocompl_not	"Nascondi il titolo della pagina">
 <!ENTITY Ctr_autocompl_sep	"Mostra i separatori tra i risultati">
 <!ENTITY Ctr_urlbar_uc		"Disattiva il completamento automatico">
 <!ENTITY Ctr_lbsugresi		"Disattiva il limite di altezza">
-<!ENTITY Ctr_cresultshcb	"Custom height limit: ">
+<!ENTITY Ctr_cresultshcb	"Limite di altezza personalizzato: ">
 <!ENTITY Ctr_lbsugres		"Numero di risultati">
 <!ENTITY Ctr_lbsbradius		"Arrotondamento personalizzato della barra degli indirizzi e di ricerca">
 
@@ -308,11 +309,11 @@
 
 <!ENTITY Ctr_toolbars		"Barre degli strumenti">
 <!ENTITY Ctr_dblclnewtab	"Doppio clic del mouse per aprire una nuova scheda">
-<!ENTITY Ctr_dblclnewtabdes	"Not suitable for all complete themes while Windows titlebar is active.">
+<!ENTITY Ctr_dblclnewtabdes	"Non adatto per tutti i temi completi mentre la barra del titolo di Windows è attiva.">
 <!ENTITY Ctr_hidetbwot		"Nascondi la barra delle schede quando è aperta una sola scheda">
 <!ENTITY Ctr_hidetbwote		"Velocizza la scomparsa della barra all’avvio">
 <!ENTITY Ctr_hidetbwote_i	"Potrebbe causare anomalie nella barra delle schede">
-<!ENTITY Ctr_hidetbwote2	"Automatically adjust titlebar space">
+<!ENTITY Ctr_hidetbwote2	"Regola in automatico lo spazio della barra del titolo">
 <!ENTITY Ctr_notabfog		"Disattiva l’effetto nebbia (Windows AeroGlass e Win8)">
 <!ENTITY Ctr_notabbg		"Rimuovi colore di sfondo (Windows AeroGlass e Win8)">
 <!ENTITY Ctr_hightabpos		"Quando possibile, riduci lo spazio sopra le barre">
@@ -378,12 +379,12 @@
 <!ENTITY Ctr_e_readermode	"Modalità lettura">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Icone altoparlanti nelle schede">
-<!ENTITY Ctr_e_containertab	"Container Tabs">
-<!ENTITY Ctr_e_findbarhl	"Findbar highlighting">
-<!ENTITY Ctr_fx50findbarhl	"Unchecking these preferences removes findbars 'highlight' features.">
+<!ENTITY Ctr_e_containertab	"Schede container">
+<!ENTITY Ctr_e_findbarhl	"Evidenziamento della barra per la ricerca nel testo">
+<!ENTITY Ctr_fx50findbarhl	"Deselezionando queste preferenze vengono rimosse le caratteristiche di evidenziamento della barra per la ricerca nel testo.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oneoffsearch	"Autocomplete popups search selection">
-<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes search selection from location bars autocomplete popup.">
+<!ENTITY Ctr_e_oneoffsearch	"Selezione di ricerca dei menu a comparsa di autocompletamento">
+<!ENTITY Ctr_fx51OOSeach	"Deselezionando questa preferenza viene rimossa la selezione di ricerca del menu a comparsa di autocompletamento dalle barre degli indirizzi.">
 
 
 <!ENTITY Ctr_pw_settings	"Impostazioni">
@@ -399,18 +400,18 @@
 <!ENTITY Ctr_special_info	"Alcune opzioni si applicano solo in casi particolari">
 <!ENTITY Ctr_special_info2	"Le impostazioni sono pensate per il tema predefinito e potrebbero non funzionare con altri temi">
 <!ENTITY Ctr_special_acr	"Only report issues through official support channels and not by using 'Add-on Compatibility Reporter'!">
-<!ENTITY Ctr_support		"Support">
-<!ENTITY Ctr_support_forum1	"MozillaZine (English forum)">
-<!ENTITY Ctr_support_forum2	"Camp Firefox (German forum)">
-<!ENTITY Ctr_github_issues	"Report issue on Github">
-<!ENTITY Ctr_newversion		"Check for new version">
+<!ENTITY Ctr_support		"Supporto">
+<!ENTITY Ctr_support_forum1	"MozillaZine (forum inglese)">
+<!ENTITY Ctr_support_forum2	"Camp Firefox (forum tedesco)">
+<!ENTITY Ctr_github_issues	"Segnala un problema su Github">
+<!ENTITY Ctr_newversion		"Controlla se c'è una nuova versione">
 
 <!ENTITY Ctr_addon-bar.accesskey		"B">
 <!ENTITY appMenuGettingStarted.label	"Primi passi">
 <!ENTITY goCmd.label					"Vai">
 <!ENTITY Ctr_menu_restart.label			"Riavvia">
 <!ENTITY Ctr_restartapp					"'Riavvia' nel menu del Pulsante &brandShortName; e nel menu File">
-<!ENTITY Ctr_ctrnewinv					"Underline new options for current &brandShortName; version">
+<!ENTITY Ctr_ctrnewinv					"Sottolinea le nuove opzioni della versione corrente di &brandShortName;">
 
 <!ENTITY Ctr_openInCurrentTab			"Apri l'indirizzo nella scheda corrente">
 <!ENTITY Ctr_openInNewTab				"Apri l'indirizzo in una nuova scheda">
