--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -15,6 +15,7 @@
 <!ENTITY Ctr_windowcontrols	"Мин/макс/закрыть (полноэкранный)">
 <!ENTITY Ctr_rr				"Перезапустите &brandShortName;!">
 <!ENTITY Ctr_window			"окно">
+<!ENTITY Ctr_centered		"Centered">
 
 <!ENTITY Ctr_cuibuttons		"Кнопки:">
 <!ENTITY Ctr_cuibutnormal	"Обычные">
