--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -15,6 +15,7 @@
 <!ENTITY Ctr_windowcontrols	"Kontrollelemente (Vollbild)">
 <!ENTITY Ctr_rr				"Neustart benötigt!">
 <!ENTITY Ctr_window			"Fenster">
+<!ENTITY Ctr_centered		"Zentriert">
 
 <!ENTITY Ctr_cuibuttons		"Schaltflächen">
 <!ENTITY Ctr_cuibutnormal	"Normal">
