--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -15,6 +15,7 @@
 <!ENTITY Ctr_windowcontrols	"Ελαχιστοποίηση/Μεγιστοποίηση/Κλείσιμο (Πλήρης οθόνη)">
 <!ENTITY Ctr_rr				"Απαιτείται επανεκκίνηση!">
 <!ENTITY Ctr_window			"Παράθυρο">
+<!ENTITY Ctr_centered		"Centered">
 
 <!ENTITY Ctr_cuibuttons		"Κουμπιά">
 <!ENTITY Ctr_cuibutnormal	"Κανονικά">
