--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -15,6 +15,7 @@
 <!ENTITY Ctr_windowcontrols	"Min/Max/Cerrar (pantalla completa)">
 <!ENTITY Ctr_rr				"¡Requiere reiniciar!">
 <!ENTITY Ctr_window			"ventana">
+<!ENTITY Ctr_centered		"Centered">
 
 <!ENTITY Ctr_cuibuttons		"Botones">
 <!ENTITY Ctr_cuibutnormal	"Normales">
