--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -15,6 +15,7 @@
 <!ENTITY Ctr_windowcontrols	"Min./maks./začinić (połna wobrazowka)">
 <!ENTITY Ctr_rr				"Startujće &brandShortName; znowa!">
 <!ENTITY Ctr_window			"wokno">
+<!ENTITY Ctr_centered		"Centered">
 
 <!ENTITY Ctr_cuibuttons		"Tłóčatka">
 <!ENTITY Ctr_cuibutnormal	"Normalny">
