--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -15,6 +15,7 @@
 <!ENTITY Ctr_windowcontrols	"Pulsanti controllo finestra (A tutto schermo)">
 <!ENTITY Ctr_rr				"Riavviare &brandShortName;!">
 <!ENTITY Ctr_window			"la finestra">
+<!ENTITY Ctr_centered		"Centered">
 
 <!ENTITY Ctr_cuibuttons		"Pulsanti">
 <!ENTITY Ctr_cuibutnormal	"Normali">
