--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -15,6 +15,7 @@
 <!ENTITY Ctr_windowcontrols	"最小/最大/閉じる (フルスクリーン)">
 <!ENTITY Ctr_rr				"要 &brandShortName; 再起動">
 <!ENTITY Ctr_window			"ウィンドウ">
+<!ENTITY Ctr_centered		"Centered">
 
 <!ENTITY Ctr_cuibuttons		"ボタン">
 <!ENTITY Ctr_cuibutnormal	"通常">
