--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -15,6 +15,7 @@
 <!ENTITY Ctr_windowcontrols	"Mínimo/máximo/fechar (tela cheia)">
 <!ENTITY Ctr_rr				"Reinicie o &brandShortName;!">
 <!ENTITY Ctr_window			"Janela">
+<!ENTITY Ctr_centered		"Centered">
 
 <!ENTITY Ctr_cuibuttons		"Botões">
 <!ENTITY Ctr_cuibutnormal	"Normais">
