--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -15,6 +15,7 @@
 <!ENTITY Ctr_windowcontrols	"мін/макс/закрити (повний екран)">
 <!ENTITY Ctr_rr				"Перезапустіть &brandShortName;!">
 <!ENTITY Ctr_window			"вікно">
+<!ENTITY Ctr_centered		"Centered">
 
 <!ENTITY Ctr_cuibuttons		"Кнопки">
 <!ENTITY Ctr_cuibutnormal	"Нормальні">
