--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -15,7 +15,7 @@
 <!ENTITY Ctr_windowcontrols	"Min/max/sulge (Täisekraan)">
 <!ENTITY Ctr_rr				"Taaskäivitamine vajalik!">
 <!ENTITY Ctr_window			"aken">
-<!ENTITY Ctr_centered		"Centered">
+<!ENTITY Ctr_centered		"Keskele joondatud">
 
 <!ENTITY Ctr_cuibuttons		"Nupud">
 <!ENTITY Ctr_cuibutnormal	"Tavalised">
@@ -173,7 +173,7 @@
 <!ENTITY Ctr_ctroldsearch	"Vana otsing">
 <!ENTITY Ctr_ctroldsearchc	"Pärast otsingu teostamist tühjenda otsingukast">
 <!ENTITY Ctr_ctroldsearchr	"Pärast otsingu teostamist taasta vaikimisi otsingumootor">
-<!ENTITY Ctr_ctrosearchdel	"delay">
+<!ENTITY Ctr_ctrosearchdel	"viivitusega">
 <!ENTITY Ctr_search_oit		"Ava otsingutulemuste leht uuel kaardil">
 <!ENTITY Ctr_osearch_meoit	"Hiire keskmise nupuga klõpsamine: otsi uuel esiplaanil oleval kaardil">
 <!ENTITY Ctr_osearch_iwidth	"Automaatselt kohanda hüpiku laiust">
