--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -15,7 +15,7 @@
 <!ENTITY Ctr_windowcontrols	"Min./maks./začinić (połna wobrazowka)">
 <!ENTITY Ctr_rr				"Startujće &brandShortName; znowa!">
 <!ENTITY Ctr_window			"wokno">
-<!ENTITY Ctr_centered		"Centered">
+<!ENTITY Ctr_centered		"Centrowano">
 
 <!ENTITY Ctr_cuibuttons		"Tłóčatka">
 <!ENTITY Ctr_cuibutnormal	"Normalny">
@@ -153,7 +153,7 @@
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sekunda)">
 <!ENTITY Ctr_findbar		"Pytanska lajsta">
 <!ENTITY Ctr_findbar_hws	"Pytanske polo začinić, hdyž so strona kula">
-<!ENTITY Ctr_findbar_width	"Findboxes width: ">
+<!ENTITY Ctr_findbar_width	"Šěrokosć pytanskich lajstow: ">
 <!ENTITY Ctr_findbarpos		"Pozicijia pytanskeje lajsty">
 <!ENTITY Ctr_findbar_def	"Deleka (standard)">
 <!ENTITY Ctr_findbar_top	"Horjeka">
@@ -173,7 +173,7 @@
 <!ENTITY Ctr_ctroldsearch	"Stare pytanje">
 <!ENTITY Ctr_ctroldsearchc	"Po pytanju pytanske polo wuprózdnić">
 <!ENTITY Ctr_ctroldsearchr	"Po pytanju so k prěnjej pytawje w lisćinje wróćić">
-<!ENTITY Ctr_ctrosearchdel	"delay">
+<!ENTITY Ctr_ctrosearchdel	"komdźenje">
 <!ENTITY Ctr_search_oit		"Pytanje w nowym rajtarku wočinić">
 <!ENTITY Ctr_osearch_meoit	"Srjedźne kliknjenja: W nowym 'prědkowym rajtarku' pytać">
 <!ENTITY Ctr_osearch_iwidth	"Šěrokosć wuskakowaceho wokna přiměrić">
@@ -284,7 +284,7 @@
 <!ENTITY Ctr_autocompl_it	"Zapiski 'Pytać z...' and 'Wopytać' wotstronić (jeli eksistujetej)">
 <!ENTITY Ctr_autocompl_hl	"Wuzběhnjenje tekstowych wotpowědnikow">
 <!ENTITY Ctr_autocompl_rhl	"Aero-barby za wuzběhnjene wuslědki">
-<!ENTITY Ctr_autocompl_not	"Hide page title">
+<!ENTITY Ctr_autocompl_not	"Titul strony schować">
 <!ENTITY Ctr_autocompl_sep	"Dźělatko mjez wuslědkami pokazać">
 <!ENTITY Ctr_urlbar_uc		"Funkciju 'Zjednoćene awtowudospołnjenje' znjemóžnić">
 <!ENTITY Ctr_lbsugresi		"Limit wysokosće znjemóžnić">
