--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -15,7 +15,7 @@
 <!ENTITY Ctr_windowcontrols	"Мин/макс/закрыть (полноэкранный)">
 <!ENTITY Ctr_rr				"Перезапустите &brandShortName;!">
 <!ENTITY Ctr_window			"окно">
-<!ENTITY Ctr_centered		"Centered">
+<!ENTITY Ctr_centered		"По центру">
 
 <!ENTITY Ctr_cuibuttons		"Кнопки:">
 <!ENTITY Ctr_cuibutnormal	"Обычные">
@@ -153,7 +153,7 @@
 <!ENTITY Ctr_nbisizedelay	"мс (1000 мс = 1 сек)">
 <!ENTITY Ctr_findbar		"Панель поиска">
 <!ENTITY Ctr_findbar_hws	"Закрывать панель поиска при прокрутке страницы">
-<!ENTITY Ctr_findbar_width	"Findboxes width: ">
+<!ENTITY Ctr_findbar_width	"Ширина панели поиска: ">
 <!ENTITY Ctr_findbarpos		"Положение панели поиска">
 <!ENTITY Ctr_findbar_def	"внизу (по умолчанию)">
 <!ENTITY Ctr_findbar_top	"вверху">
@@ -284,7 +284,7 @@
 <!ENTITY Ctr_autocompl_it	"Удалить пункты «Искать в...» и «Посетить» (при наличии)">
 <!ENTITY Ctr_autocompl_hl	"Выделение текстовых результатов">
 <!ENTITY Ctr_autocompl_rhl	"«Aero» цвета выделения результатов">
-<!ENTITY Ctr_autocompl_not	"Hide page title">
+<!ENTITY Ctr_autocompl_not	"Скрывать заголовок страницы">
 <!ENTITY Ctr_autocompl_sep	"Разделитель между результатами">
 <!ENTITY Ctr_urlbar_uc		"Отключить функцию автозавершения">
 <!ENTITY Ctr_lbsugresi		"Отключить ограничение по высоте">
