--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -15,7 +15,7 @@
 <!ENTITY Ctr_windowcontrols	"Min./maks./zacyniś (połna wobrazowka)">
 <!ENTITY Ctr_rr				"Startujśo &brandShortName; znowego!">
 <!ENTITY Ctr_window			"wokno">
-<!ENTITY Ctr_centered		"Centered">
+<!ENTITY Ctr_centered		"Centrěrowano">
 
 <!ENTITY Ctr_cuibuttons		"Tłocaški">
 <!ENTITY Ctr_cuibutnormal	"Normalny">
@@ -153,7 +153,7 @@
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sekunda)">
 <!ENTITY Ctr_findbar		"Pytańska rědka">
 <!ENTITY Ctr_findbar_hws	"Pytańsku rědku zacyniś, gaž bok se kula">
-<!ENTITY Ctr_findbar_width	"Findboxes width: ">
+<!ENTITY Ctr_findbar_width	"Šyrokosć pytańskich rědkow: ">
 <!ENTITY Ctr_findbarpos		"Pozicija pytańskeje rědki">
 <!ENTITY Ctr_findbar_def	"Dołojce (standard)">
 <!ENTITY Ctr_findbar_top	"Górjejce">
@@ -173,7 +173,7 @@
 <!ENTITY Ctr_ctroldsearch	"Stare pytanje">
 <!ENTITY Ctr_ctroldsearchc	"Pó pytanju pytańske pólo wuprozniś">
 <!ENTITY Ctr_ctroldsearchr	"Pó pytanju so k prědnej pytnicy w lisćinje wrośiś">
-<!ENTITY Ctr_ctrosearchdel	"delay">
+<!ENTITY Ctr_ctrosearchdel	"wokomuźenje">
 <!ENTITY Ctr_search_oit		"Pytanje w nowem rejtarku wócyniś">
 <!ENTITY Ctr_osearch_meoit	"Srjejźne kliknjenja: Pytanje w nowem 'prědkowem rejtarku'">
 <!ENTITY Ctr_osearch_iwidth	"Šyrokosć wuskokujucego wokna awtomatiski pśiměriś">
@@ -284,7 +284,7 @@
 <!ENTITY Ctr_autocompl_it	"Zapiska 'Pytaś z...' a 'Woglědaś' wótpóraś (jolic eksistěrujotej)">
 <!ENTITY Ctr_autocompl_hl	"Wuzwignjenje tekstowych wótpowědnikow">
 <!ENTITY Ctr_autocompl_rhl	"Aero-barwy za wuzwignjone wuslědki">
-<!ENTITY Ctr_autocompl_not	"Hide page title">
+<!ENTITY Ctr_autocompl_not	"Titel boka schowaś">
 <!ENTITY Ctr_autocompl_sep	"Źěleńsku liniju mjazy wuslědkami pokazaś">
 <!ENTITY Ctr_urlbar_uc		"Funkciju 'zjadnośone awotwudopołnjenje' znjemóžniś">
 <!ENTITY Ctr_lbsugresi		"Limit wusokosći znjemóžniś">
