--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -15,7 +15,7 @@
 <!ENTITY Ctr_windowcontrols	"Ελαχιστοποίηση/Μεγιστοποίηση/Κλείσιμο (Πλήρης οθόνη)">
 <!ENTITY Ctr_rr				"Απαιτείται επανεκκίνηση!">
 <!ENTITY Ctr_window			"Παράθυρο">
-<!ENTITY Ctr_centered		"Centered">
+<!ENTITY Ctr_centered		"Στο κέντρο">
 
 <!ENTITY Ctr_cuibuttons		"Κουμπιά">
 <!ENTITY Ctr_cuibutnormal	"Κανονικά">
@@ -153,7 +153,7 @@
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 δευτερόλεπτο)">
 <!ENTITY Ctr_findbar		"Γραμμή εύρεσης">
 <!ENTITY Ctr_findbar_hws	"Κλείσιμο γραμμής εύρεσης κατά την κύλιση της σελίδας">
-<!ENTITY Ctr_findbar_width	"Findboxes width: ">
+<!ENTITY Ctr_findbar_width	"Εύρος πλαισίου εύρεσης: ">
 <!ENTITY Ctr_findbarpos		"Θέση γραμμής εύρεσης">
 <!ENTITY Ctr_findbar_def	"Κάτω μέρος (προεπιλογή)">
 <!ENTITY Ctr_findbar_top	"Κορυφή">
@@ -173,7 +173,7 @@
 <!ENTITY Ctr_ctroldsearch	"Παλιότερη διεπαφή αναζήτησης">
 <!ENTITY Ctr_ctroldsearchc	"Κένωση πλαισίου αναζήτησης μετά την αναζήτηση">
 <!ENTITY Ctr_ctroldsearchr	"Επαναφορά στην πρώτη μηχανή αναζήτησης στη λίστα μετά την αναζήτηση">
-<!ENTITY Ctr_ctrosearchdel	"delay">
+<!ENTITY Ctr_ctrosearchdel	"καθυστέρηση">
 <!ENTITY Ctr_search_oit		"Άνοιγμα αναζήτησης σε νέα καρτέλα">
 <!ENTITY Ctr_osearch_meoit	"Μεσαίο κλικ: αναζήτηση σε νέα καρτέλα στο προσκήνιο">
 <!ENTITY Ctr_osearch_iwidth	"Αυτόματη ρύθμιση εύρους αναδυόμενου">
@@ -284,7 +284,7 @@
 <!ENTITY Ctr_autocompl_it	"Απομάκρυνση στοιχείων «Αναζήτηση με ...» και «Επίσκεψη» (εάν υπάρχουν)">
 <!ENTITY Ctr_autocompl_hl	"Επισήμανση ευρημάτων κειμένου">
 <!ENTITY Ctr_autocompl_rhl	"Χρώματα «Aero» για επισημασμένα αποτελέσματα">
-<!ENTITY Ctr_autocompl_not	"Hide page title">
+<!ENTITY Ctr_autocompl_not	"Απόκρυψη τίτλου σελίδας">
 <!ENTITY Ctr_autocompl_sep	"Εμφάνιση διαχωριστικού μεταξύ αποτελεσμάτων">
 <!ENTITY Ctr_urlbar_uc		"Απενεργοποίηση χαρακτηριστικού ενιαίας αυτόματης συμπλήρωσης">
 <!ENTITY Ctr_lbsugresi		"Απενεργοποίηση ορίου ύψους">
