--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -15,7 +15,7 @@
 <!ENTITY Ctr_windowcontrols	"мін/макс/закрити (повний екран)">
 <!ENTITY Ctr_rr				"Перезапустіть &brandShortName;!">
 <!ENTITY Ctr_window			"вікно">
-<!ENTITY Ctr_centered		"Centered">
+<!ENTITY Ctr_centered		"По центру">
 
 <!ENTITY Ctr_cuibuttons		"Кнопки">
 <!ENTITY Ctr_cuibutnormal	"Нормальні">
@@ -153,7 +153,7 @@
 <!ENTITY Ctr_nbisizedelay	"мс (1000 мс = 1 сек)">
 <!ENTITY Ctr_findbar		"Панель пошуку">
 <!ENTITY Ctr_findbar_hws	"Закрити панель пошуку, коли прокручується сторінка">
-<!ENTITY Ctr_findbar_width	"Findboxes width: ">
+<!ENTITY Ctr_findbar_width	"Ширина пошукових полів: ">
 <!ENTITY Ctr_findbarpos		"Панель пошуку">
 <!ENTITY Ctr_findbar_def	"Типова позиція">
 <!ENTITY Ctr_findbar_top	"Нагорі">
@@ -284,7 +284,7 @@
 <!ENTITY Ctr_autocompl_it	"Усунути пункти «Шукати з...» та «Відвідати» (якщо присутні)">
 <!ENTITY Ctr_autocompl_hl	"Виділення текстових результатів">
 <!ENTITY Ctr_autocompl_rhl	"Кольори Aero для виділених результатів">
-<!ENTITY Ctr_autocompl_not	"Hide page title">
+<!ENTITY Ctr_autocompl_not	"Приховати заголовок сторінки">
 <!ENTITY Ctr_autocompl_sep	"Показати розділювач між результатами">
 <!ENTITY Ctr_urlbar_uc		"Вимкнути функцію «автозаповнення»">
 <!ENTITY Ctr_lbsugresi		"Вимкнути обмеження висоти">
