--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -15,7 +15,7 @@
 <!ENTITY Ctr_windowcontrols	"最小/最大/閉じる (フルスクリーン)">
 <!ENTITY Ctr_rr				"要 &brandShortName; 再起動">
 <!ENTITY Ctr_window			"ウィンドウ">
-<!ENTITY Ctr_centered		"Centered">
+<!ENTITY Ctr_centered		"中央揃え">
 
 <!ENTITY Ctr_cuibuttons		"ボタン">
 <!ENTITY Ctr_cuibutnormal	"通常">
@@ -173,7 +173,7 @@
 <!ENTITY Ctr_ctroldsearch	"古い検索スタイル">
 <!ENTITY Ctr_ctroldsearchc	"検索後に検索ボックスを消去する">
 <!ENTITY Ctr_ctroldsearchr	"検索後にリスト最上位の検索エンジンに変更する">
-<!ENTITY Ctr_ctrosearchdel	"delay">
+<!ENTITY Ctr_ctrosearchdel	"検索後も保持する">
 <!ENTITY Ctr_search_oit		"検索結果を新しいタブで開く">
 <!ENTITY Ctr_osearch_meoit	"中クリック: 検索結果を新しい新しいタブで開く">
 <!ENTITY Ctr_osearch_iwidth	"ポップアップの幅を合わせる">
