--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -179,7 +179,7 @@
 <!ENTITY Ctr_osearch_iwidth	"Pop-up-Breite automatisch der Suchfeldbreite anpassen">
 <!ENTITY Ctr_osearch_cwidth	"Eigene Breite für Such-Pop-ups">
 <!ENTITY Ctr_osearch_dm		"Kleinere Aufklapp-Schaltfläche">
-<!ENTITY Ctr_addonmanager	"Add-ons-Manager">
+<!ENTITY Ctr_addonmanager	"Add-ons-Verwaltung">
 <!ENTITY Ctr_alt_addonsp	"'Mehr Details'-Seite: Alternative Anordnung">
 <!ENTITY Ctr_am_showrecup	"'Zuletzt durchgeführte Updates' immer anzeigen">
 <!ENTITY Ctr_alt_addonsm	"Alternative Darstellung">
