--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -282,6 +282,7 @@
 <!ENTITY Ctr_autocomplete	"Αναδυόμενο αυτόματης συμπλήρωσης">
 <!ENTITY Ctr_altautocompl	"Εναλλακτική εμφάνιση">
 <!ENTITY Ctr_autocompl_it	"Απομάκρυνση στοιχείων «Αναζήτηση με ...» και «Επίσκεψη» (εάν υπάρχουν)">
+<!ENTITY Ctr_acompl_search	"Show search engines">
 <!ENTITY Ctr_autocompl_hl	"Επισήμανση ευρημάτων κειμένου">
 <!ENTITY Ctr_autocompl_rhl	"Χρώματα «Aero» για επισημασμένα αποτελέσματα">
 <!ENTITY Ctr_autocompl_not	"Απόκρυψη τίτλου σελίδας">
@@ -384,8 +385,6 @@
 <!ENTITY Ctr_e_findbarhl	"Επισημάνσεις γραμμής εύρεσης">
 <!ENTITY Ctr_fx50findbarhl	"Αποεπιλέγοντας αυτή την προτίμηση απομακρύνονται οι δυνατότητες επισήμανσης της γραμμής εύρεσης.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oneoffsearch	"Δυνατότητα επιλογής μηχανής αναζήτησης από αναδυόμενο αυτόματης συμπλήρωσης">
-<!ENTITY Ctr_fx51OOSeach	"Αποεπιλέγοντας αυτή την προτίμηση απομακρύνεται η δυνατότητα επιλογής μηχανής αναζήτησης από το αναδυόμενο αυτόματης συμπλήρωσης της γραμμής τοποθεσιών.">
 
 
 <!ENTITY Ctr_pw_settings	"Ρυθμίσεις">
