--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -282,6 +282,7 @@
 <!ENTITY Ctr_autocomplete	"Automaatlõpetamise hüpik">
 <!ENTITY Ctr_altautocompl	"Alternatiivne välimus">
 <!ENTITY Ctr_autocompl_it	"Eemalda kirjed 'Otsi otsingumootoriga...' ja 'Külasta' (kui on)">
+<!ENTITY Ctr_acompl_search	"Show search engines">
 <!ENTITY Ctr_autocompl_hl	"Sisestatule vastava teksti esiletõstmine">
 <!ENTITY Ctr_autocompl_rhl	"Aero värvid esiletõstetud tulemuste tähistamiseks">
 <!ENTITY Ctr_autocompl_not	"Peida lehe pealkiri">
@@ -384,8 +385,6 @@
 <!ENTITY Ctr_e_findbarhl	"Otsinguribal esiletõstmine">
 <!ENTITY Ctr_fx50findbarhl	"Nendelt eelistustelt märke eemaldamine keelab otsinguribal esiletõstmise võimalused.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oneoffsearch	"Otsimootorite valik automaatlõpetuse hüpikus">
-<!ENTITY Ctr_fx51OOSeach	"Sellelt eelistuselt märke eemaldamine eemaldab asukohariba automaatlõpetuse hüpikust otsimootorite valiku.">
 
 
 <!ENTITY Ctr_pw_settings	"Sätted">
