--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -282,6 +282,7 @@
 <!ENTITY Ctr_autocomplete	"Completamento automatico">
 <!ENTITY Ctr_altautocompl	"Aspetto alternativo">
 <!ENTITY Ctr_autocompl_it	"Rimuovi le voci 'Cerca con...' e 'Apri' (se presenti)">
+<!ENTITY Ctr_acompl_search	"Show search engines">
 <!ENTITY Ctr_autocompl_hl	"Evidenziamento del testo dei risultati">
 <!ENTITY Ctr_autocompl_rhl	"Colori Aero per i risultati evidenziati">
 <!ENTITY Ctr_autocompl_not	"Nascondi il titolo della pagina">
@@ -384,8 +385,6 @@
 <!ENTITY Ctr_e_findbarhl	"Evidenziamento della barra per la ricerca nel testo">
 <!ENTITY Ctr_fx50findbarhl	"Deselezionando queste preferenze vengono rimosse le caratteristiche di evidenziamento della barra per la ricerca nel testo.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oneoffsearch	"Selezione di ricerca dei menu a comparsa di autocompletamento">
-<!ENTITY Ctr_fx51OOSeach	"Deselezionando questa preferenza viene rimossa la selezione di ricerca del menu a comparsa di autocompletamento dalle barre degli indirizzi.">
 
 
 <!ENTITY Ctr_pw_settings	"Impostazioni">
