--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -282,6 +282,7 @@
 <!ENTITY Ctr_autocomplete	"Popup auto completar">
 <!ENTITY Ctr_altautocompl	"Aparência alternativa">
 <!ENTITY Ctr_autocompl_it	"Remover itens 'Pesquisar com...' e 'Visitar' itens (se presente)">
+<!ENTITY Ctr_acompl_search	"Show search engines">
 <!ENTITY Ctr_autocompl_hl	"Realçar ocorrências do texto">
 <!ENTITY Ctr_autocompl_rhl	"Cores Aero para resultados realçados">
 <!ENTITY Ctr_autocompl_not	"Ocultar título da página">
@@ -384,8 +385,6 @@
 <!ENTITY Ctr_e_findbarhl	"Realce da barra de localização">
 <!ENTITY Ctr_fx50findbarhl	"Desmarcar estas preferências remove os recursos de 'realce' das barra de localização.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oneoffsearch	"Seleção de pesquisa no popup de preenchimento automático">
-<!ENTITY Ctr_fx51OOSeach	"Desmarcar esta preferência remove a seleção de pesquisa do popup de preenchimento automático das barras de localização.">
 
 
 <!ENTITY Ctr_pw_settings	"Configurações">
