--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -282,6 +282,7 @@
 <!ENTITY Ctr_autocomplete	"Автозавершение">
 <!ENTITY Ctr_altautocompl	"Альтернативный внешний вид">
 <!ENTITY Ctr_autocompl_it	"Удалить пункты «Искать в...» и «Посетить» (при наличии)">
+<!ENTITY Ctr_acompl_search	"Show search engines">
 <!ENTITY Ctr_autocompl_hl	"Выделение текстовых результатов">
 <!ENTITY Ctr_autocompl_rhl	"«Aero» цвета выделения результатов">
 <!ENTITY Ctr_autocompl_not	"Скрывать заголовок страницы">
@@ -384,8 +385,6 @@
 <!ENTITY Ctr_e_findbarhl	"Подсветка панели поиска">
 <!ENTITY Ctr_fx50findbarhl	"Отключение параметра убирает функцию «подсветки» панели поиска.">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
-<!ENTITY Ctr_e_oneoffsearch	"Выбор поисковой системы в меню автозавершения">
-<!ENTITY Ctr_fx51OOSeach	"Отключение параметра убирает выбор поисковой системы из меню автозавершения адресной строки.">
 
 
 <!ENTITY Ctr_pw_settings	"Настройки">
