--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -282,6 +282,7 @@
 <!ENTITY Ctr_autocomplete	"Pojavno okno samodokončevanja">
 <!ENTITY Ctr_altautocompl	"Nadomestni videz">
 <!ENTITY Ctr_autocompl_it	"Odstrani predmeta 'Išči s/z …' in 'Obišči' (če sta prisotna)">
+<!ENTITY Ctr_acompl_search	"Show search engines">
 <!ENTITY Ctr_autocompl_hl	"Označevanje zadetkov">
 <!ENTITY Ctr_autocompl_rhl	"Barve Aero za poudarjene rezultate">
 <!ENTITY Ctr_autocompl_not	"Skrij naziv strani">
@@ -384,8 +385,6 @@
 <!ENTITY Ctr_e_findbarhl	"Poudarjanje iskalne vrstice">
 <!ENTITY Ctr_fx50findbarhl	"Odznačitev teh nastavitev odstrani možnosti 'poudarjanja' iskalne vrstice.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oneoffsearch	"Izbira iskanja pojavnega seznama samodokončevanja">
-<!ENTITY Ctr_fx51OOSeach	"Odznačitev te nastavitve odstrani izbiro iskanja pojavnega seznama naslovne vrstice.">
 
 
 <!ENTITY Ctr_pw_settings	"Nastavitve">
