--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -282,6 +282,7 @@
 <!ENTITY Ctr_autocomplete	"Okno autokompletace">
 <!ENTITY Ctr_altautocompl	"Alternativní vzhled">
 <!ENTITY Ctr_autocompl_it	"Odstranit položky 'Vyhledat pomocí...' a 'Navštívit' (pokud se vyskytují)">
+<!ENTITY Ctr_acompl_search	"Show search engines">
 <!ENTITY Ctr_autocompl_hl	"Highlighting of text hits">
 <!ENTITY Ctr_autocompl_rhl	"Aero colors for highlighted results">
 <!ENTITY Ctr_autocompl_not	"Hide page title">
@@ -384,8 +385,6 @@
 <!ENTITY Ctr_e_findbarhl	"Findbar highlighting">
 <!ENTITY Ctr_fx50findbarhl	"Unchecking these preferences removes findbars 'highlight' features.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oneoffsearch	"Autocomplete popups search selection">
-<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes search selection from location bars autocomplete popup.">
 
 
 <!ENTITY Ctr_pw_settings	"Možnosti">
