--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -282,6 +282,7 @@
 <!ENTITY Ctr_autocomplete	"Autovervollständigungs-Pop-up">
 <!ENTITY Ctr_altautocompl	"Alternative Darstellung">
 <!ENTITY Ctr_autocompl_it	"'Mit ... suchen'- und 'Aufrufen'-Elemente entfernen (falls vorhanden)">
+<!ENTITY Ctr_acompl_search	"Suchmaschinen anzeigen">
 <!ENTITY Ctr_autocompl_hl	"Hervorhebung von Texttreffern">
 <!ENTITY Ctr_autocompl_rhl	"Blaue 'Aero'-Farben für hervorgehobene Ergebnisse">
 <!ENTITY Ctr_autocompl_not	"Seitentitel verbergen">
@@ -384,8 +385,6 @@
 <!ENTITY Ctr_e_findbarhl	"Seitensuchhervorhebung">
 <!ENTITY Ctr_fx50findbarhl	"Das Deaktivieren dieser Optionen entfernt die 'Seitensuchhervorhebung'.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oneoffsearch	"Suchauswahl im Autovervollständigungs-Pop-up">
-<!ENTITY Ctr_fx51OOSeach	"Das Deaktivieren dieser Optionen entfernt die Suchauswahl im Autovervollständigungs-Pop-up.">
 
 
 <!ENTITY Ctr_pw_settings	"Einstellungen">
