--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -282,6 +282,7 @@
 <!ENTITY Ctr_autocomplete	"Wuskakowace wokno awtowudospołnjenja">
 <!ENTITY Ctr_altautocompl	"Alternatiwny napohlad">
 <!ENTITY Ctr_autocompl_it	"Zapiski 'Pytać z...' and 'Wopytać' wotstronić (jeli eksistujetej)">
+<!ENTITY Ctr_acompl_search	"Show search engines">
 <!ENTITY Ctr_autocompl_hl	"Wuzběhnjenje tekstowych wotpowědnikow">
 <!ENTITY Ctr_autocompl_rhl	"Aero-barby za wuzběhnjene wuslědki">
 <!ENTITY Ctr_autocompl_not	"Titul strony schować">
@@ -384,8 +385,6 @@
 <!ENTITY Ctr_e_findbarhl	"Wuzběhnjenje pytanskeho pola">
 <!ENTITY Ctr_fx50findbarhl	"Hdyž so tute nastajenja znjemóžnja, so 'wuzběhnjenske' funkcije wotstronja.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oneoffsearch	"Pytanski wuběr we wudospołnjowanskim wuskakowacym woknje">
-<!ENTITY Ctr_fx51OOSeach	"Hdyž tute nastajenje znjemóžnjeće, so pytanski wuběr awtowudospołnjowaceho wuskakowaceho wokna adresoweho pola wotstronja.">
 
 
 <!ENTITY Ctr_pw_settings	"Nastajenja">
