--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -282,6 +282,7 @@
 <!ENTITY Ctr_autocomplete	"自動補完リスト">
 <!ENTITY Ctr_altautocompl	"替わりの補完候補機能で置き換える">
 <!ENTITY Ctr_autocompl_it	"「…で検索」と「…を開く」を表示しない (可能ならば)">
+<!ENTITY Ctr_acompl_search	"Show search engines">
 <!ENTITY Ctr_autocompl_hl	"一致部分を強調表示する">
 <!ENTITY Ctr_autocompl_rhl	"検索結果のハイライト色を Aero カラーにする">
 <!ENTITY Ctr_autocompl_not	"ページタイトルを隠す">
@@ -384,8 +385,6 @@
 <!ENTITY Ctr_e_findbarhl	"検索バーハイライト">
 <!ENTITY Ctr_fx50findbarhl	"この設定をオフにすると、検索バーのハイライト機能を無効にします。">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
-<!ENTITY Ctr_e_oneoffsearch	"自動補完候補リストの検索エンジン">
-<!ENTITY Ctr_fx51OOSeach	"この設定をオフにすると、ロケーションバーの自動補完候補リストに検索エンジンを表示しません。">
 
 
 <!ENTITY Ctr_pw_settings	"設定">
