--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -282,6 +282,7 @@
 <!ENTITY Ctr_autocomplete	"Menu podręczne autouzupełniania">
 <!ENTITY Ctr_altautocompl	"Alternatywny wygląd">
 <!ENTITY Ctr_autocompl_it	"Usuń elementy 'szukaj w...' oraz 'otwórz stronę' (jeżeli obecne)">
+<!ENTITY Ctr_acompl_search	"Show search engines">
 <!ENTITY Ctr_autocompl_hl	"Podświetlanie wystąpień tekstu">
 <!ENTITY Ctr_autocompl_rhl	"Kolory Aero dla podświetlonych wyników">
 <!ENTITY Ctr_autocompl_not	"Ukryj tytuł strony">
@@ -384,8 +385,6 @@
 <!ENTITY Ctr_e_findbarhl	"Podświetlanie paska wyszukiwania">
 <!ENTITY Ctr_fx50findbarhl	"Odznaczenie tych ustawień usuwa funkcje 'podświetlania' paska wyszukiwania.">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
-<!ENTITY Ctr_e_oneoffsearch	"Wybór wyszukiwarki w menu podręcznym autouzupełniania">
-<!ENTITY Ctr_fx51OOSeach	"Odznaczenie tego ustawienia usuwa wybór wyszukiwarki z menu podręcznego autouzupełniania paska adresu.">
 
 
 <!ENTITY Ctr_pw_settings	"Ustawienia">
