--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -282,6 +282,7 @@
 <!ENTITY Ctr_autocomplete	"Спливаюче вікно автозаповнення">
 <!ENTITY Ctr_altautocompl	"Альтернативний вигляд">
 <!ENTITY Ctr_autocompl_it	"Усунути пункти «Шукати з...» та «Відвідати» (якщо присутні)">
+<!ENTITY Ctr_acompl_search	"Show search engines">
 <!ENTITY Ctr_autocompl_hl	"Виділення текстових результатів">
 <!ENTITY Ctr_autocompl_rhl	"Кольори Aero для виділених результатів">
 <!ENTITY Ctr_autocompl_not	"Приховати заголовок сторінки">
@@ -384,8 +385,6 @@
 <!ENTITY Ctr_e_findbarhl	"Підсвічування в пошуковій панелі">
 <!ENTITY Ctr_fx50findbarhl	"Вимкнення цього параметру усуває «підсвічувальні» особливості пошукової панелі.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oneoffsearch	"Автозавершення спливаючих вікон пошукового вибору">
-<!ENTITY Ctr_fx51OOSeach	"Вимкнення цього параметру усуває пошуковий вибір зі спливаючого вікна панелей розташування.">
 
 
 <!ENTITY Ctr_pw_settings	"Налаштування">
