--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -282,6 +282,7 @@
 <!ENTITY Ctr_autocomplete	"自动完成弹出框">
 <!ENTITY Ctr_altautocompl	"备选的外观">
 <!ENTITY Ctr_autocompl_it	"移除 “使用...搜索” 和 “访问” 项目 (如果存在的话)">
+<!ENTITY Ctr_acompl_search	"Show search engines">
 <!ENTITY Ctr_autocompl_hl	"文本匹配时高亮">
 <!ENTITY Ctr_autocompl_rhl	"高亮结果使用 Aero 颜色">
 <!ENTITY Ctr_autocompl_not	"隐藏页面标题">
@@ -384,8 +385,6 @@
 <!ENTITY Ctr_e_findbarhl	"搜索栏高亮">
 <!ENTITY Ctr_fx50findbarhl	"不选中此项以移除搜索栏“高亮”功能。">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oneoffsearch	"自动完成弹出搜索">
-<!ENTITY Ctr_fx51OOSeach	"不选中此项以从地址栏自动完成弹出框中移除搜索选择。">
 
 
 <!ENTITY Ctr_pw_settings	"设置">
