--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -282,7 +282,7 @@
 <!ENTITY Ctr_autocomplete	"自動補完リスト">
 <!ENTITY Ctr_altautocompl	"替わりの補完候補機能で置き換える">
 <!ENTITY Ctr_autocompl_it	"「…で検索」と「…を開く」を表示しない (可能ならば)">
-<!ENTITY Ctr_acompl_search	"Show search engines">
+<!ENTITY Ctr_acompl_search	"検索エンジンを表示する">
 <!ENTITY Ctr_autocompl_hl	"一致部分を強調表示する">
 <!ENTITY Ctr_autocompl_rhl	"検索結果のハイライト色を Aero カラーにする">
 <!ENTITY Ctr_autocompl_not	"ページタイトルを隠す">
