--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -282,7 +282,7 @@
 <!ENTITY Ctr_autocomplete	"Menu podręczne autouzupełniania">
 <!ENTITY Ctr_altautocompl	"Alternatywny wygląd">
 <!ENTITY Ctr_autocompl_it	"Usuń elementy 'szukaj w...' oraz 'otwórz stronę' (jeżeli obecne)">
-<!ENTITY Ctr_acompl_search	"Show search engines">
+<!ENTITY Ctr_acompl_search	"Pokaż wyszukiwarki">
 <!ENTITY Ctr_autocompl_hl	"Podświetlanie wystąpień tekstu">
 <!ENTITY Ctr_autocompl_rhl	"Kolory Aero dla podświetlonych wyników">
 <!ENTITY Ctr_autocompl_not	"Ukryj tytuł strony">
