Update zh-CN locale

--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -282,7 +282,7 @@
 <!ENTITY Ctr_autocomplete	"自动完成弹出框">
 <!ENTITY Ctr_altautocompl	"备选的外观">
 <!ENTITY Ctr_autocompl_it	"移除 “使用...搜索” 和 “访问” 项目 (如果存在的话)">
-<!ENTITY Ctr_acompl_search	"Show search engines">
+<!ENTITY Ctr_acompl_search	"显示搜索引擎">
 <!ENTITY Ctr_autocompl_hl	"文本匹配时高亮">
 <!ENTITY Ctr_autocompl_rhl	"高亮结果使用 Aero 颜色">
 <!ENTITY Ctr_autocompl_not	"隐藏页面标题">
